Use inputs over text areas, and fix overflow

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -14,6 +14,10 @@
 @import "spinner";
 @import "yellow_box";
 
+.main-content {
+  margin: 1em 1em 0;
+}
+
 .hero {
   background-color: white;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -61,8 +65,4 @@
       }
     }
   }
-}
-
-.main-content {
-  margin-top: 1em;
 }
